# Black-Box-Optimization

./: .gitignore  CMakeLists.txt  Makefile  README.md  Random.cpp  Random.hpp  evolutionary_algorithm.cpp  evolutionary_algorithm.hpp  functions.cpp  functions.hpp  initialization.cpp  initialization.hpp  main  main.cpp  mutation.cpp  mutation.hpp  random.cpp  random.hpp  recombination.cpp  recombination.hpp  replacement.cpp  replacement.hpp  scenario.cpp  scenario.hpp  selection.cpp  selection.hpp  statistical_comparison.cpp  statistical_comparison.hpp  structures.hpp
API/: CompetitionEvaluator.cpp  KusiakLayoutEvaluator.cpp
different_algorithm/: evolutionary_algorithm.cpp  evolutionary_algorithm.hpp  functions.cpp  functions.hpp  initialization.cpp  initialization.hpp  main.cpp  mutation.cpp  mutation.hpp  random.cpp  random.hpp  recombination.cpp  recombination.hpp  replacement.cpp  replacement.hpp  scenario.cpp  scenario.hpp  selection.cpp  selection.hpp  statistical_comparison.cpp  structures.hpp
different_algorithm/API/: CompetitionScenario.cpp  GA.cpp
pops/: population0.txt  population2.txt  population3.txt
